# CellModeller5-Old

./: .gitignore  .gitmodules  README.md
Backend/: .gitignore  CMakeLists.txt
Backend/cellmodeller5/: Simulation.py  __init__.py
Backend/cellmodeller5/shaders/: collision_shader.glsl
Backend/native/: frame_capture.cpp  frame_capture.h  gpu_device.cpp  gpu_device.h  interface.cpp  result.h  simulator.cpp  simulator.h
CellModeller/: .gitignore  CMakeLists.txt  setup.py
CellModeller/cellmodeller5/: Simulator.py  __init__.py
CellModeller/native/: gpu_device.cpp  gpu_device.h  interface.cpp  result.h
CellModeller/src/: gpu_device.cpp  gpu_device.h  interface.cpp  main.cpp  result.h  shader_compiler.cpp  shader_compiler.h  simulator.cpp  simulator.h
Server/: manage.py  manage_dbgservlet.py
Server/VizToolServer/: apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
Server/debugservlet/: apps.py  asgi.py  consumers.py  routing.py  settings.py  urls.py  views.py  wsgi.py
Server/saveviewer/: apps.py  archiver.py  format.py  urls.py  views.py
Server/simrunner/: apps.py  consumers.py  routing.py  urls.py  views.py  websocket_groups.py
Server/simrunner/backend/: CellModeller4Backend.py  DuplexPipeEndpoint.py  SimulationBackend.py  SimulationProcess.py
Server/simrunner/backends/: backend.py  cellmodeller4.py  cellmodeller5.py
Server/simrunner/instances/: manager.py  siminstance.py  simprocess.py  simthread.py
Server/static/: background-wall.html  bacterium.gltf  index-stylesheet.css  index.html  login-stylesheet.css  login.html  stylesheet.css  viewer-stylesheet.css  viewer.html
Server/static/scripts/: index-script.js  login-script.js  render.js  tool-main.js  viewer-main.js  viewer-render.js  wall-render.js
Server/static/shaders/: cell_shader.frag  cell_shader.vert  grid_shader.frag  grid_shader.vert
Server/userauth/: apps.py  urls.py  views.py
